--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,14 +46,13 @@
 
     <TextView
         android:id="@+id/result_info"
-        android:layout_marginTop="50dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/main_btn"
-        android:fontFamily="@font/montserrat_bold"
+        android:layout_marginTop="50dp"
+        android:fontFamily="@font/montserrat"
         android:textAlignment="center"
         android:textColor="@color/textColorHint"
-        android:background="@color/purple_200"
         android:textSize="25sp" />
 
 </RelativeLayout>
